# SDK-IA

./: .env.example  .gitattributes  .gitignore  AGENT_CONSOLE_SETUP.md  COMPILATION_NOTES.md  Cargo.toml  DEVELOPMENT.md  Makefile  PLAN.md  Plan de arquitectura.md  README.md  TEST_TEST_TEST.rs  exchange-out.txt  pyproject.toml  rust-toolchain  sdkia.sh  sdkia.sh.README.md
.cargo/: config.toml
.github/workflows/: ci.yml  ci_test.yml  ci_test2.yml
data/: .gitkeep
data/hollywood_animal/: compatibility_rules.csv  elements.csv
data/projects/: .gitkeep
docs/: api-contract.md  api-contract.yaml  architecture.md  development.md
docs/api-contract/: examples.md  index.md  overview.md  schemas.md  sdk.md  secretario.md
python/: requirements.txt
python/secretario/: .env_agentes  USAGE.md  __init__.py  agents.py  agents_manager.py  config.py  hollywood_animal.py  logging.py  main.py  mistral_client.py  models.py  projects.py  rust_client.py  schemas.py  storage.py
python/secretario/static/: index.html
python/secretario/tests/: __init__.py
scripts/: build.py  check_dependencies.py  deploy.py  init_database.py  setup_environment.py  test_integration.py
src/: app_data.rs  config.rs  logging.rs  main.rs
src/api/: handlers.rs  log_routes.rs  middleware.rs  mod.rs  routes.rs
src/api/handlers/: agent.rs  hollywood_animal.rs  mod.rs  project.rs
src/config/: db.rs  logging.rs
src/domain/: agent.rs  enums.rs  event.rs  hollywood_animal.rs  ids.rs  mod.rs  narrative.rs  project.rs  story_element.rs  structures.rs
src/logging/: README.md  mod.rs  store.rs
src/services/: compatibility.rs  generation.rs  logging.rs  mod.rs  narrative.rs  persistence.rs  project.rs  python_client.rs  selection.rs  validation.rs  versioning.rs
src/web/: mod.rs
src/web/assets/: .gitkeep
tests/: __init__.py  mod.rs
tests/services/: mod.rs  test_compatibility.rs  test_narrative.rs  test_persistence.rs  test_validation.rs  test_versioning.rs
ui/: .env  .gitignore  package-lock.json  package.json  vite.config.ts
ui/public/: index.html  reference_interface.html
ui/src/: App.tsx
ui/src/api/: agents.ts  client.ts  config.ts  narratives.ts  projects.ts
ui/src/components/: AgentConsole.css  AgentConsole.tsx  index.ts
ui/src/components/Agent/: AgentCard.tsx  AgentForm.tsx  AgentList.tsx  index.ts
ui/src/components/Chat/: ChatInterface.tsx  FullChatInterface.css  FullChatInterface.tsx  MessageInput.tsx  MessageList.tsx  index.ts
ui/src/components/Common/: Button.tsx  Dashboard.css  Dashboard.tsx  ErrorDisplay.tsx  Input.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  Navbar.tsx  Sidebar.tsx  index.ts
ui/src/components/Generation/: GenerationForm.tsx  GenerationInterface.tsx  GenerationResults.tsx  NarrativeGenerator.css  NarrativeGenerator.tsx  index.ts
ui/src/components/Project/: ProjectCard.tsx  ProjectForm.tsx  ProjectList.css  ProjectList.tsx
ui/src/hooks/: index.ts  useAgents.ts  useChat.ts  useGeneration.ts  useProjects.ts
ui/src/styles/: agentConsole.css  globals.css  main.css  variables.css
ui/src/types/: agent.ts  index.ts
